--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="UTF-8">
-  <title>Spanish Vocabulary</title>
+  <title>Color Game</title>
   <link rel="stylesheet" href="./lang_style.css" />
 </head>
 
